--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
-body 
-	{
+<html>
+<head>
+<style>
+<body>
+body {
   text-align: center;
 	}
 	
@@ -38,3 +41,5 @@ div.desc {
   box-sizing: border-box;
 }
 
+</body>
+</html>
